use @Slf4j annotation for service logs